# react-native-reality

./: ArCore.podspec  CONTRIBUTING.md  LICENSE  README.md  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/arcore/: ARAppSystem.kt  AREvent.kt  ARViewRegistry.kt  AppLifecycleListener.kt  ArCore.kt  ArCorePackage.kt  CurrentActivityTracker.java  FaceEvent.kt  HybridARView.kt
cpp/: ARApplication.h  ARApplicationWrapper.h  ARSessionManager.cpp  ARSessionManager.h  AndroidPlatformServices.cpp  AndroidPlatformServices.h  BackgroundRenderer.cpp  BackgroundRenderer.h  HybridCrossPlatformArCore.cpp  HybridCrossPlatformArCore.hpp  IPlatformServices.h  ObjRenderer.cpp  ObjRenderer.h  PlaneRenderer.cpp  PlaneRenderer.h  Texture.cpp  Texture.h  utils.cpp  utils.h
example/: Gemfile  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/ArCoreExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ArCoreExample.xcodeproj/: project.pbxproj
example/ios/ArCoreExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: ArCore.swift  HybridARView.swift
src/: ARFaceFilter.tsx  ARFaceSceneContext.ts  ARObject.tsx  ARSceneContext.ts  ARView.nitro.ts  ARView.tsx  ArCore.nitro.ts  index.tsx  resolveAsset.ts  session.ts  types.ts
(+4 files in other folders)
